<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <!-- Welcome Text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome!"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        />

    <!-- Please Login -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="We're happy to see you. Please login to continue."
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginVertical="10dp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="20dp"/>

    <!-- Username -->
    <EditText
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="Email"
        android:textSize="20sp"
        android:background="@null"
        />

    <!-- Password -->
    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:background="@null"
        />

    <!-- Forgot Password -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot password?"
        android:textSize="15sp"
        android:textColor="#5A422C"
        android:layout_marginStart="20dp"
        android:layout_marginVertical="20dp"/>

    <!-- Login Button -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="18sp"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_rectange_button"
        android:textAllCaps="false" />

    <!-- Social Login -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <!-- Social Login Buttons -->
        <Button
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_margin="10dp"
            android:background="@drawable/google_logo" />

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/apple_logo" />

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/facebook_logo" />
    </LinearLayout>

    <!-- Register Option -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account?"
            android:textSize="14sp"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="Register"
            android:textColor="#59442F"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
