...
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"/>

        <!-- Posts Section -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/postsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5.25"
            tools:listitem="@layout/item_post"/>

        <!-- Bottom Navigation Bar -->
...
